...
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/movie_profile_frame_add"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/background_circle">

        <ImageView
            android:layout_width="wrap_content"
...
            android:background="@drawable/icon_watchlist_add"
            android:contentDescription="@string/description_add_to_collection"
            android:elevation="5dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/movie_profile_frame_seen"
        android:layout_width="55dp"
        android:layout_height="55dp"

        android:layout_marginHorizontal="10dp"
        android:background="@drawable/background_circle">

...
