<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/mylist_fragment"
        android:title="@string/screen_myList"
        android:icon="@drawable/ic_bookmark" />

    <item android:id="@+id/explore_fragment"
        android:title="@string/screen_explore"
        android:icon="@drawable/ic_globe" />

</menu>
