<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/explore_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"

        tools:listitem="@layout/list_item_movie_card" />

</LinearLayout>